fix: css overflow and docker-compose failure when running Frontend

--- a/frontend/src/css/components/CardComponent.css
+++ b/frontend/src/css/components/CardComponent.css
@@ -46,4 +46,5 @@
   font-size: 1rem;
   font-family: Cocogoose;
   color: var(--color1);
+  word-wrap: break-word;
 }
